# dev-machine

./: -  .gitignore  Cargo.toml  README.md  bootstrap.ps1
.github/workflows/: ci.yml  release.yml
config/: winget-packages.json
dotfiles/git/: .gitconfig
dotfiles/powershell/: Microsoft.PowerShell_profile.ps1
dotfiles/rider/: README.md
dotfiles/vscode/: keybindings.json  settings.json
scripts/: README.md  configure-git.ps1  configure-powershell.ps1  configure-rider.ps1  configure-vscode.ps1  configure-wsl.ps1  winget-install.ps1
src/: cli.rs  error.rs  lib.rs  main.rs  output.rs
src/commands/: export.rs  mod.rs  setup.rs  upgrade.rs
src/components/: git.rs  mod.rs  powershell.rs  traits.rs  vscode.rs  winget.rs  wsl.rs
src/utils/: mod.rs  paths.rs  shell.rs
wsl/: provision-ubuntu.sh
