[package]
name = "dev-machine"
version = "0.1.0"
edition = "2021"
authors = ["Dev Machine Bootstrap"]
description = "Bootstrap and configure a Windows development machine"
readme = "README.md"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging and output
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"

# Path handling
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
